contenue et style de la page about

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <meta name="description" content="GitTuto Design">
     <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
     <div include-html="includes/header.html"></div>
@@ -14,6 +15,33 @@
     <main class="fade-anim delay-5ms">
         <section class="container about">
             <!-- about content here -->
+            <h1>about</h1>
+            <h2>Why We Started schlapala</h2>
+            <p class="about-p">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto ea porro cumque accusamus, aperiam eveniet explicabo similique asperiores ex quos, numquam temporibus nam totam at, in itaque odit perspiciatis voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto ea porro cumque accusamus, aperiam eveniet explicabo similique asperiores ex quos, numquam temporibus nam totam at, in itaque odit perspiciatis voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto ea porro cumque accusamus, aperiam eveniet explicabo similique asperiores ex quos, numquam temporibus nam totam at, in itaque odit perspiciatis voluptas?
+            </p>
+            <h2>What we do</h2>
+            <p class="about-p">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto ea porro cumque accusamus, aperiam eveniet explicabo similique asperiores ex quos, numquam temporibus nam totam at, in itaque odit perspiciatis voluptas?Some stats include:
+            </p>
+            <ul>
+                <li class="about-li">Lorem ipsum dolor sit amet</li>
+                <li class="about-li">Lorem ipsum dolor sit amet</li>
+                <li class="about-li">Lorem ipsum dolor sit amet</li>
+            </ul>
+            <p class="about-p">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, omnis. Nesciunt quasi quaerat ab tempora ullam natus perspiciatis provident adipisci sapiente aspernatur, laborum omnis aut odio. Ullam itaque ipsam minus.
+            </p>
+            <h2>We Want To Hear From You</h2>
+            <p class="about-p">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum inventore iusto, blanditiis maiores similique optio, hic ex dolorum unde culpa reiciendis quibusdam nostrum quia fugit, quisquam nihil modi omnis! Illum!
+            </p>
+            <p class="about-p">
+                Lorem ipsum dolor, sit amet consectetur <a class="about-a" href="#">adipisicing elit</a>.
+            </p>
+            <p class="about-p">
+                Lorem ipsum dolor, sit amet consectetur.
+            </p>
         </section>
     </main>
 
