ajout page portofolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,20 @@
         <section class="container portfolio">
             <!-- portfolio content here -->
             <h1>Portfolio</h1>
+        <div class="container-fluid ml-5">
+            <div class="row">
+                <div class="col-3"><img class="img-fluid" src="./img/article.project-1.png" alt=""> </div>
+                <div class="col-3"><img class="img-fluid" src="./img/article.project-2.png" alt=""> </div>
+                <div class="col-3"><img class="img-fluid" src="./img/article.project-3.png" alt=""> </div>
+                <div class="col-3"><img class="img-fluid" src="./img/article.project-4.png" alt=""> </div>
+            </div>
+            <div class="row ml-5">
+                <div class="col-3"><img class="img-fluid" src="./img/article.project-5.png" alt=""> </div>
+                <div class="col-3"><img class="img-fluid" src="./img/article.project-6.png" alt=""> </div>
+                <div class="col-3"><img class="img-fluid" src="./img/article.project-1.png" alt=""> </div>
+                <div class="col-3"><img class="img-fluid" src="./img/article.project-2.png" alt=""> </div>
+            </div>
+        </div>    
         </section>
     </main>
 
